--- a/package.json
+++ b/package.json
@@ -2,17 +2,14 @@
   "name": "iamport-typings",
   "version": "1.3.1",
   "description": "TypeScript type definitions for iamport",
-  "main": "index.d.js",
-  "types": "index.d.js",
+  "main": "src/index.d.js",
+  "types": "src/index.d.js",
   "repository": "https://github.com/junhoyeo/iamport-typings",
   "author": "JunhoYeo <hanaro0704@gmail.com>",
   "license": "MIT",
   "files": [
     "README.md",
     "tsconfig.json",
-    "index.d.ts",
-    "RequestPayNaverParams.ts",
-    "RequestPayParams.ts",
-    "RequestPayResponse.ts"
+    "src"
   ]
 }
