--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,5 @@
     "noEmit": true,
     "forceConsistentCasingInFileNames": true
   },
-  "files": [
-    "index.d.ts",
-    "RequestPayParams.ts",
-    "RequestPayResponse.ts",
-    "RequestPayNaverParams.ts"
-  ]
+  "include": ["src"]
 }
