--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "iamport-typings",
   "version": "1.3.1",
-  "description": "TypeScript type definitions for iamport",
+  "description": "TypeScript type definitions for PortOne (formerly Iamport)",
   "main": "src/index.d.js",
   "types": "src/index.d.js",
   "repository": "https://github.com/junhoyeo/iamport-typings",
-  "author": "JunhoYeo <hanaro0704@gmail.com>",
+  "author": "Junho Yeo <i@junho.io>",
   "license": "MIT",
   "files": [
     "README.md",
